Fix bottom nav pushed behind footer

--- a/src/App.css
+++ b/src/App.css
@@ -262,7 +262,7 @@ h2 {
     }
 
     .bottom-nav {
-      margin: 2.5em 0 0 0;
+      margin: 2.5em 0 7em 0;
     }
 
   }
